web-portfolio/kubernetes-manifests/prod/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-prod
  labels:
    name: portfolio-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: portfolio-prod
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ghcr.io/crcasiswho/demostration-portfolio-application:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: portfolio-prod
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
